@@ -1,5 +1,8 @@
 Cacti CHANGELOG
 
+SVN
+-bug#0001632: script server treats quoted arguments with spaces as multiple separate arguments 
+
 0.8.7g
 -bug: RRDTool 1.4.x not recognized during installation
 -bug: Implement windows-aware shell escaping
